<resources>
    <string name="app_name">MiniGames</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_sudoku">Sudoku</string>
    <string name="sudoku">Sudoku</string>
    <string name="new_game">Start New Game</string>
    <string name="add_new_board">Add New Board</string>
    <string name="show_instructions">Show Instructions</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_1">1. In Sudoku it is intended to place all the remaining pieces on the board. The numbers range from 1 to 9 (in 9x9 Sudoku).</string>
    <string name="instructions_2">2. The board is separated into 9 squares, and inside each of them it is only allowed to place one of each number.</string>
    <string name="instructions_3">3. It is only allowed to place one of each number at each row, both horizontal and vertical.</string>
    <string name="go_back_button">Go Back</string>
    <string name="choose_difficulty">Choose difficulty level</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="start_game">Start Game</string>
    <string name="board_correct">Board is correct</string>
    <string name="board_incorrect">Board is incorrect</string>
    <string name="start_piece_error">Cannot change start piece</string>
    <string name="check_board">Check board</string>
    <string name="choose_a_number">Choose number to place</string>
    <string name="choose_number">Choose Number</string>
    <string name="piece_unsure">Mark piece as unsure</string>
    <string name="remove_piece">Remove Piece</string>
    <string name="Sudoku">Sudoku</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="shoot_up">Shoot Up</string>
    <string name="speed_math">Speed Math</string>

</resources>