<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shootup"
            android:icon="@drawable/ic_videogame_asset_24px"
            android:title="@string/shoot_up" />
        <item
            android:id="@+id/nav_sudoku"
            android:icon="@drawable/ic_grid_on_24px"
            android:title="@string/sudoku" />
        <item
            android:id="@+id/nav_tictactoe"
            android:icon="@drawable/ic_highlight_off_24px"
            android:title="@string/tic_tac_toe" />
    </group>
</menu>