<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="402dp"
        android:layout_height="639dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonShowInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/cellGroupFragment"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="0" />

            <fragment
                android:id="@+id/cellGroupFragment2"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="1" />

            <fragment
                android:id="@+id/cellGroupFragment3"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/cellGroupFragment4"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="3" />

            <fragment
                android:id="@+id/cellGroupFragment5"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="4" />

            <fragment
                android:id="@+id/cellGroupFragment6"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="117dp">

            <fragment
                android:id="@+id/cellGroupFragment7"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="6" />

            <fragment
                android:id="@+id/cellGroupFragment8"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="7" />

            <fragment
                android:id="@+id/cellGroupFragment9"
                android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.CellGroupFragment"
                android:layout_width="140dp"
                android:layout_height="159dp"
                android:layout_weight="1"
                android:tag="8" />
        </TableRow>

    </TableLayout>

    <fragment
        android:id="@+id/keyboardFragment"
        android:name="edu.ucsb.cs.cs184.runyu.minigames.ui.sudoku.KeyboardFragment"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/sudokuComplete"
        android:layout_width="600dp"
        android:layout_height="200dp"
        android:textSize="35dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:gravity="center" />

    <Button
        android:id="@+id/buttonShowInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onShowInstructionsButtonClicked"
        android:text="@string/show_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCheckBoard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:onClick="onGoBackButtonClicked"
        android:text="@string/go_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonShowInstructions"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/buttonCheckBoard"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoardButtonClicked"
        android:text="@string/check_board"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonShowInstructions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>